Revision history for App-USBKeyCopyCon

1.01  2009-??-??
      - add command-line option parsing:
          --no-root-check to skip the check for root permissions

1.00  2009-11-28
      - initial release
