@@ -1,10 +1,6 @@
 - document ENV vars passed to profile scripts
-- scan for available profiles
-- allow user to select profile in confirm_master_dialog
 - add command-line option handling:
-  --no-root-check
   --use-sudo
-  --profile
 - implement Edit > Preferences
   - enable/disable sounds
   - select a sound file (+ test button)
